Se arreglan imagenes

--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -140,7 +140,7 @@
                         
                         <div class="row row row-cols-1 row-cols-xl-4 row-cols-md-2 g-4 my-1">
                   
-
+                          <!--Dividir col y card en div-->
                           <div class="col card border-0 h-100" >
                             <div class="card-body">
                               <h5 class="card-title">PERU</h5>
