--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -27,16 +27,11 @@
         </button>
       </div>
 
-      <div class="row px-3 py-3">
+      <div class="row row-cols-1 row-cols-md-1 py-3">
         
         <div class="col">
         <iframe style="width: 100%; height: 400px;"  src="https://www.youtube.com/embed/YoXp1pOf2Jc" title="Conoce tu Universidad | UTEL Universidad" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
-
-        <div class="col">
-        <iframe style="width: 100%; height: 400px;"  src="https://www.youtube.com/embed/B6EARR9qQSw" title="Onboarding | Conoce Utel X" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
-
       </div>
 
       <div class="row row-cols-1 row-cols-md-2 g-4">
