--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -53,7 +53,7 @@
           </button>
         </form>
       </div>
-      <p class="text-center">Already Have an Account?
+      <p class="text-center">
         <a href="/users/signin" class="text-info">Login</a></p>
     </div>
   </div>
