--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -212,7 +212,7 @@
 
           <div>
             <h2 class="text-center">¿Como es un proceso de titulación para LATAM?</h2>  
-            <img class="img-proceso" src="img/ProcesoTL.PNG">
+            <img class="img-proceso" src="img/procesotl.PNG">
               <div class="card border-0 card-proceso col-lg-9 ">
                 <h5 class="card-title" >El proceso consta de:</h5> </br>
                 <p class="card-text">
