--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -138,7 +138,7 @@
                             </div>
             
                             <div class="col text-center ">
-                              <img src="Img/serviciosocial/Proceso_regular.PNG" style="height: 700px;">
+                              <img src="img/serviciosocial/proceso_regular.png" style="height: 700px;">
                             </div>    
                           </div>                                              
                         </div>
@@ -158,7 +158,7 @@
                 <div class="row row-cols-xl-1 row-cols-xl-4 row-cols-md-4">
 
                   <!--Carta aceptación publica-->
-                  <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom1" aria-controls="offcanvasBottom"><img style="height: 200px"src="Img/serviciosocial/carta-aceptacion-publica.png" title="Carta aceptación publica"></i></button>
+                  <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom1" aria-controls="offcanvasBottom"><img style="height: 200px"src="img/serviciosocial/carta-aceptacion-publica.png" title="Carta aceptación publica"></i></button>
          
                   <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom1" aria-labelledby="offcanvasBottomLabel">
                   <div class="offcanvas-header">
@@ -176,11 +176,11 @@
                           <div class="carousel-inner carousel-inner-ejemplo">
                             <div class="carousel-item active">
                             Formato
-                              <img src="Img/serviciosocial/carta-aceptacion-publica.png" class="d-block w-100" alt="...">
+                              <img src="img/serviciosocial/carta-aceptacion-publica.png" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
                             Ejemplo  
-                              <img src="Img/serviciosocial/carta-aceptacion-publica-ejemplo.PNG" class="d-block w-100" alt="...">
+                              <img src="img/serviciosocial/carta-aceptacion-publica-ejemplo.png" class="d-block w-100" alt="...">
                             </div>
                           </div>
                           <button class="carousel-control-prev" type="button" data-bs-target="#carousel1" data-bs-slide="prev">
@@ -226,7 +226,7 @@
                   </div>
 
                   <!--Reporte global de actividades-->
-                  <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom3" aria-controls="offcanvasBottom"><img style="height: 200px"src="Img/serviciosocial/reporteglobal.png"></i></button>
+                  <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom3" aria-controls="offcanvasBottom"><img style="height: 200px"src="img/serviciosocial/reporteglobal.png"></i></button>
         
                   <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom3" aria-labelledby="offcanvasBottomLabel">
                   <div class="offcanvas-header">
@@ -244,11 +244,11 @@
                           <div class="carousel-inner carousel-inner-ejemplo">
                             <div class="carousel-item active">
                             Formato
-                              <img src="Img/serviciosocial/reporteglobal.PNG" class="d-block w-100" alt="...">
+                              <img src="img/serviciosocial/reporteglobal.png" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
                             Ejemplo  
-                              <img src="Img/serviciosocial/reporteglobal-ejemplo.PNG" class="d-block w-100" alt="...">
+                              <img src="img/serviciosocial/reporteglobal-ejemplo.png" class="d-block w-100" alt="...">
                             </div>
                           </div>
                           <button class="carousel-control-prev" type="button" data-bs-target="#carousel3" data-bs-slide="prev">
@@ -293,7 +293,7 @@
                   </div>
 
                   <!--Constancia de termino-->
-                  <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom4" aria-controls="offcanvasBottom"><img style="height: 200px"src="Img/serviciosocial/constanciadet.png"></i></button>
+                  <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom4" aria-controls="offcanvasBottom"><img style="height: 200px"src="img/serviciosocial/constanciadet.png"></i></button>
         
                   <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom4" aria-labelledby="offcanvasBottomLabel">
                 <div class="offcanvas-header">
@@ -311,11 +311,11 @@
                         <div class="carousel-inner carousel-inner-ejemplo">
                           <div class="carousel-item active">
                           Formato
-                            <img src="Img/serviciosocial/constanciadet.PNG" class="d-block w-100" alt="...">
+                            <img src="img/serviciosocial/constanciadet.png" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
                           Ejemplo  
-                            <img src="Img/serviciosocial/constanciadet-ejemplo.PNG" class="d-block w-100" alt="...">
+                            <img src="img/serviciosocial/constanciadet-ejemplo.png" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carousel4" data-bs-slide="prev">
@@ -380,11 +380,11 @@
                         <div class="carousel-inner carousel-inner-ejemplo">
                           <div class="carousel-item active">
                           Formato
-                            <img src="Img/serviciosocial/constanciadet.PNG" class="d-block w-100" alt="...">
+                            <img src="img/serviciosocial/constanciadet.png" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
                           Ejemplo  
-                            <img src="Img/serviciosocial/constanciadet-ejemplo.PNG" class="d-block w-100" alt="...">
+                            <img src="img/serviciosocial/constanciadet-ejemplo.png" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carousel4" data-bs-slide="prev">
