--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -212,7 +212,7 @@
 
           <div>
             <h2 class="text-center">¿Como es un proceso de titulación para LATAM?</h2>  
-            <img class="img-proceso" src="img/procesotl.PNG">
+            <img class="img-proceso" src="img/procesotl.png">
               <div class="card border-0 card-proceso col-lg-9 ">
                 <h5 class="card-title" >El proceso consta de:</h5> </br>
                 <p class="card-text">
@@ -293,13 +293,13 @@
                       <div id="carouseltitinter" class="carousel carousel-ejemplo slide">
                         <div class="carousel-inner carousel-inner-ejemplo">
                           <div class="carousel-item active">
-                            <img src="img/titulacion/titulo-intermedio1.png" class="d-block w-100" alt="...">
+                            <img src="img/titulacion/titulo-intermedio1.png" class="imagenes_ejemplo d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/titulacion/titulo-intermedio2.png" class="d-block w-100" alt="...">
+                            <img src="img/titulacion/titulo-intermedio2.png" class="imagenes_ejemplo d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/titulacion/titulo-intermedio3.png" class="d-block w-100" alt="...">
+                            <img src="img/titulacion/titulo-intermedio3.png" class="imagenes_ejemplo d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouseltitinter" data-bs-slide="prev">
@@ -384,7 +384,7 @@
         
                           <div class="col">
 
-                            <img src="img/titulacion/cerpar1.png" class="d-block w-100" alt="...">
+                            <img src="img/titulacion/cerpar1.png" class="imagenes_ejemplo d-block w-100" alt="...">
                             
                           </div>
                           
