--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -362,7 +362,7 @@
                   </div> 
 
                   <!--Carta de presentación-->
-                  <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom4" aria-controls="offcanvasBottom"><img style="height: 200px"src="Img/serviciosocial/constanciadet.png" title="Carta de presentación"></i></button>
+                  <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom4" aria-controls="offcanvasBottom"><img style="height: 200px"src="img/serviciosocial/constanciadet.png" title="Carta de presentación"></i></button>
         
                   <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom4" aria-labelledby="offcanvasBottomLabel">
                 <div class="offcanvas-header">
@@ -374,7 +374,6 @@
                   <div class="row row-cols-1 row-cols-xl-2 row-cols-md-2">
 
                     <div class="col">
-                      
                       
                       <div id="carousel4" class="carousel carousel-ejemplo slide">
                         <div class="carousel-inner carousel-inner-ejemplo">
@@ -513,7 +512,7 @@
                             </div>
             
                             <div class="col text-center ">
-                              <img src="Img/serviciosocial/Proceso_art91.PNG " style="height: 700px;">
+                              <img src="img/serviciosocial/Proceso_art91.png" style="height: 700px;">
                             </div>    
                           </div>                                              
                         </div>
@@ -532,7 +531,7 @@
                 <div class="row row-cols-xl-1 row-cols-xl-4 row-cols-md-4">
 
                   <!--Reporte global de actividades-->
-                  <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom3" aria-controls="offcanvasBottom"><img style="height: 200px"src="Img/serviciosocial/reporteglobal.png"></i></button>
+                  <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom3" aria-controls="offcanvasBottom"><img style="height: 200px"src="img/serviciosocial/reporteglobal.png"></i></button>
         
                   <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom3" aria-labelledby="offcanvasBottomLabel">
                   <div class="offcanvas-header">
@@ -550,11 +549,11 @@
                           <div class="carousel-inner carousel-inner-ejemplo">
                             <div class="carousel-item active">
                             Formato
-                              <img src="Img/serviciosocial/reporteglobal.PNG" class="d-block w-100" alt="...">
+                              <img src="img/serviciosocial/reporteglobal.png" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
                             Ejemplo  
-                              <img src="Img/serviciosocial/reporteglobal-ejemplo.PNG" class="d-block w-100" alt="...">
+                              <img src="img/serviciosocial/reporteglobal-ejemplo.png" class="d-block w-100" alt="...">
                             </div>
                           </div>
                           <button class="carousel-control-prev" type="button" data-bs-target="#carousel3" data-bs-slide="prev">
@@ -580,7 +579,7 @@
                   </div>
 
                   <!--Constancia de termino-->
-                  <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom4" aria-controls="offcanvasBottom"><img style="height: 200px"src="Img/serviciosocial/constanciadet.png"></i></button>
+                  <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom4" aria-controls="offcanvasBottom"><img style="height: 200px"src="img/serviciosocial/constanciadet.png"></i></button>
         
                   <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom4" aria-labelledby="offcanvasBottomLabel">
                 <div class="offcanvas-header">
@@ -598,11 +597,11 @@
                         <div class="carousel-inner carousel-inner-ejemplo">
                           <div class="carousel-item active">
                           Formato
-                            <img src="Img/serviciosocial/constanciadet.PNG" class="d-block w-100" alt="...">
+                            <img src="img/serviciosocial/constanciadet.png" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
                           Ejemplo  
-                            <img src="Img/serviciosocial/constanciadet-ejemplo.PNG" class="d-block w-100" alt="...">
+                            <img src="img/serviciosocial/constanciadet-ejemplo.png" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carousel4" data-bs-slide="prev">
@@ -655,7 +654,7 @@
                 <div class="row row-cols-xl-1 row-cols-xl-4 row-cols-md-4">
 
                   <!--Reporte global de actividades-->
-                  <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom3" aria-controls="offcanvasBottom"><img style="height: 200px"src="Img/serviciosocial/reporteglobal.png"></i></button>
+                  <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom3" aria-controls="offcanvasBottom"><img style="height: 200px"src="img/serviciosocial/reporteglobal.png"></i></button>
         
                   <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom3" aria-labelledby="offcanvasBottomLabel">
                   <div class="offcanvas-header">
@@ -673,11 +672,11 @@
                           <div class="carousel-inner carousel-inner-ejemplo">
                             <div class="carousel-item active">
                             Formato
-                              <img src="Img/serviciosocial/reporteglobal.PNG" class="d-block w-100" alt="...">
+                              <img src="img/serviciosocial/reporteglobal.PNG" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
                             Ejemplo  
-                              <img src="Img/serviciosocial/reporteglobal-ejemplo.PNG" class="d-block w-100" alt="...">
+                              <img src="img/serviciosocial/reporteglobal-ejemplo.PNG" class="d-block w-100" alt="...">
                             </div>
                           </div>
                           <button class="carousel-control-prev" type="button" data-bs-target="#carousel3" data-bs-slide="prev">
@@ -703,7 +702,7 @@
                   </div>
 
                   <!--Constancia de termino-->
-                  <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom4" aria-controls="offcanvasBottom"><img style="height: 200px"src="Img/serviciosocial/constanciadet.png"></i></button>
+                  <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom4" aria-controls="offcanvasBottom"><img style="height: 200px"src="img/serviciosocial/constanciadet.png"></i></button>
         
                   <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom4" aria-labelledby="offcanvasBottomLabel">
                 <div class="offcanvas-header">
@@ -721,11 +720,11 @@
                         <div class="carousel-inner carousel-inner-ejemplo">
                           <div class="carousel-item active">
                           Formato
-                            <img src="Img/serviciosocial/constanciadet.PNG" class="d-block w-100" alt="...">
+                            <img src="img/serviciosocial/constanciadet.png" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
                           Ejemplo  
-                            <img src="Img/serviciosocial/constanciadet-ejemplo.PNG" class="d-block w-100" alt="...">
+                            <img src="img/serviciosocial/constanciadet-ejemplo.png" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carousel4" data-bs-slide="prev">
@@ -814,7 +813,7 @@
                             </div>
             
                             <div class="col text-center ">
-                              <img src="Img/serviciosocial/Proceso_trabajo.PNG " style="height: 700px;">
+                              <img src="img/serviciosocial/Proceso_trabajo.PNG " style="height: 700px;">
                             </div>    
 
                           </div>                                              
@@ -835,7 +834,7 @@
                 <div class="row row-cols-xl-1 row-cols-xl-4 row-cols-md-4">
 
                   <!--Carta de aceptación para Trabajo colaborativo-->
-                  <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottomCartaAceptTC" aria-controls="offcanvasBottom"><img style="height: 200px"src="Img/serviciosocial/reporteglobal.png" title="Carta aceptación trabajo colaborativo"></i></button>
+                  <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottomCartaAceptTC" aria-controls="offcanvasBottom"><img style="height: 200px"src="img/serviciosocial/reporteglobal.png" title="Carta aceptación trabajo colaborativo"></i></button>
         
                   <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottomCartaAceptTC" aria-labelledby="offcanvasBottomLabel">
                     <div class="offcanvas-header">
@@ -853,11 +852,11 @@
                             <div class="carousel-inner carousel-inner-ejemplo">
                               <div class="carousel-item active">
                               Formato
-                                <img src="Img/serviciosocial/carta-aceptacion-publica.PNG " class="d-block w-100" alt="...">
+                                <img src="img/serviciosocial/carta-aceptacion-publica.PNG " class="d-block w-100" alt="...">
                               </div>
                               <div class="carousel-item">
                               Ejemplo  
-                                <img src="Img/serviciosocial/carta-aceptacion-publica-ejemplo.PNG" class="d-block w-100" alt="...">
+                                <img src="img/serviciosocial/carta-aceptacion-publica-ejemplo.PNG" class="d-block w-100" alt="...">
                               </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselCartaAceptTC" data-bs-slide="prev">
