Se agregan documentos de titulacion

--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -9,7 +9,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="/">Inicio</a>
+        <a class="nav-link" aria-current="page" href="/">Inicio</a>
         <a class="nav-link" href="titulacion">Titulación</a>
         <a class="nav-link" href="serviciosocial">Servicio social</a>
         <a class="nav-link" href="serviciosesc.html">Servicios escolares</a>
