--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -1157,7 +1157,7 @@
       </div>
     </div>
 
-    <!--Servicio por experiencia laboral-->
+    <!--Servicio por experiencia laboral
     <div class="accordion-item">
       <h2 class="accordion-header" id="panelsStayOpen-headingSix">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -1178,7 +1178,7 @@
         </div>
       </div>
     </div>
-
+    -->
   </div>
 
 </div>
