Se cambia index

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -27,31 +27,58 @@
         </button>
       </div>
 
+      <div class="row row-cols-1 row-cols-md-2 g-4 py-3" >
+        <div class="col">
+          <div class="card border-0">
+            <img src="img/Noticias/noticiasstrabajo.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Servicio social por experiencia laboral.</h5>
+              <p class="card-text">Se abrirá una nueva campaña con éxito estudiantil para una nueva modalidad de liberación de Servicio social por experiencia laboral. Consiste en tomar en cuenta los últimos 6 meses de trabajo (en una empresa pública o privada) para poder liberar el servicio social. </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card border-0">
+            <img src="img/Noticias/pagonoticia.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Colegiatura final outselling.</h5>
+              <p class="card-text">Habrá Colegiatura final outselling, esta consiste en descuentos, pagos a plazos y está disponible para los alumnos que tengan desde el 10% al 79% de avance curricular. 
+Esto como tal no nos toca pero es importante conocerlo. </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card border-0">
+            <img src="img/Noticias/constanciaaviso.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Constancia de inscripción.</h5>
+              <p class="card-text"> Se aperturó un nuevo accesorio que se llama Constancia de inscripción. Este documento es solo para los de nuevo ingreso y futuros. Solo se refleja la matriculación, fecha de inicio de clases, número de materias y RVOE. El costo es de $500 </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card border-0">
+            <img src="img/Noticias/equipoaviso.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"> Correspondencia escolar.</h5>
+              <p class="card-text">
+                Se anuncia la creación del nuevo equipo de Correspondencia escolar. Este equipo se encargará de la recepción y envío de los documentos en UTEL. Los integrantes del equipo son: <br/>
+                -Carlos Eduardo Barrera Sanabria (turno matutino  y responsable del área)<br/>
+                -Carlos Fernando Jiménez Huicochea (turno matutino) <br/>
+                -Erick Abdul Cureño Castillo (Turno Vespertino) <br/>
+                -Arturo Pacheco Vaquero (Turno Vespertino) 
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="row row-cols-1 row-cols-md-1 py-3">
         
         <div class="col">
         <iframe style="width: 100%; height: 400px;"  src="https://www.youtube.com/embed/YoXp1pOf2Jc" title="Conoce tu Universidad | UTEL Universidad" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
-      </div>
-
-      <div class="row row-cols-1 row-cols-md-2 g-4">
-        <div class="col">
-          <div class="card border-0">
-            <img src="img/Utel.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">UTEl</h5>
-              <p class="card-text">Noticias</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card border-0">
-            <img src="img/Utel.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">UTEL</h5>
-              <p class="card-text">Noticias</p>
-            </div>
-          </div>
         </div>
       </div>
     </div>
