Se agregan documentos y se corrigen formatos

--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -175,10 +175,62 @@
           Formatos </br>
           <div class="row row-cols-xl-1 row-cols-xl-4 row-cols-md-4">
 
+            <!--Carta de presentación-->
+            <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas"
+              data-bs-target="#offcanvasBottom4" aria-controls="offcanvasBottom"><img style="height: 200px"
+            src="img/serviciosocial/regular/carta-presentacion.png" title="Carta de presentación"></i></button>
+
+            <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom4"
+              aria-labelledby="offcanvasBottomLabel">
+              <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasBottomLabel4">Carta de presentación</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+              </div>
+              <div class="container card border border-0">
+
+                <div class="row row-cols-1 row-cols-xl-2 row-cols-md-2">
+
+                  <div class="col">
+
+                    <div id="carousel4" class="carousel carousel-ejemplo slide">
+                      <div class="carousel-inner carousel-inner-ejemplo">
+                        <div class="carousel-item active">
+                          Formato
+                          <img src="img/serviciosocial/regular/carta-presentacion.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          Ejemplo
+                          <img src="img/serviciosocial/regular/carta-presentacion.png" class="d-block w-100" alt="...">
+                        </div>
+                      </div>
+                      <button class="carousel-control-prev" type="button" data-bs-target="#carousel4"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#carousel4"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                      </button>
+                    </div>
+
+                  </div>
+
+                  <div class="col card border border-0">
+
+                    <strong class="py-3 px-3"> Caracteristicas de la carta de presentación</strong>
+
+
+                  </div>
+                </div>
+              </div>
+            </div>
+
             <!--Carta aceptación publica-->
             <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas"
               data-bs-target="#offcanvasBottom1" aria-controls="offcanvasBottom"><img style="height: 200px"
-                src="img/serviciosocial/carta-aceptacion-publica.png" title="Carta aceptación publica"></i></button>
+            src="img/serviciosocial/regular/carta-aceptacion-publica.png" title="Carta aceptación publica"></i></button>
 
             <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom1"
               aria-labelledby="offcanvasBottomLabel">
@@ -197,7 +249,7 @@
                       <div class="carousel-inner carousel-inner-ejemplo">
                         <div class="carousel-item active">
                           Formato
-                          <img src="img/serviciosocial/carta-aceptacion-publica.png" class="d-block w-100" alt="...">
+                          <img src="img/serviciosocial/regular/carta-aceptacion-publica.png" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
                           Ejemplo
@@ -399,59 +451,6 @@
                 </div>
               </div>
             </div>
-
-            <!--Carta de presentación-->
-            <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas"
-              data-bs-target="#offcanvasBottom4" aria-controls="offcanvasBottom"><img style="height: 200px"
-                src="img/serviciosocial/constanciadet.png" title="Carta de presentación"></i></button>
-
-            <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom4"
-              aria-labelledby="offcanvasBottomLabel">
-              <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasBottomLabel4">Constacia de terminación</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-              </div>
-              <div class="container card border border-0">
-
-                <div class="row row-cols-1 row-cols-xl-2 row-cols-md-2">
-
-                  <div class="col">
-
-                    <div id="carousel4" class="carousel carousel-ejemplo slide">
-                      <div class="carousel-inner carousel-inner-ejemplo">
-                        <div class="carousel-item active">
-                          Formato
-                          <img src="img/serviciosocial/constanciadet.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                          Ejemplo
-                          <img src="img/serviciosocial/constanciadet-ejemplo.png" class="d-block w-100" alt="...">
-                        </div>
-                      </div>
-                      <button class="carousel-control-prev" type="button" data-bs-target="#carousel4"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                      </button>
-                      <button class="carousel-control-next" type="button" data-bs-target="#carousel4"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                      </button>
-                    </div>
-
-                  </div>
-
-                  <div class="col card border border-0">
-
-                    <strong class="py-3 px-3"> Caracteristicas de la constancia de terminación</strong>
-
-
-                  </div>
-                </div>
-              </div>
-            </div>
-
 
           </div>
         </div>
