--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -13,7 +13,7 @@
         <a class="nav-link" href="titulacion">Titulación</a>
         <a class="nav-link" href="serviciosocial">Servicio social</a>
         <a class="nav-link" href="serviciosesc.html">Servicios escolares</a>
-        <a class="nav-link" href="controldoc.html">Recolección de documentos</a>
+        <a class="nav-link" href="recoleccion">Recolección de documentos</a>
         <a class="nav-link" href="apostille.html">Apostilla</a>
         <a class="nav-link" href="Preguntas_f.html">Dudas</a>
       <a class="nav-link" href="directorio.html">Directorio</a>
