--- a/src/views/notes/new-note.hbs
+++ b/src/views/notes/new-note.hbs
@@ -1,14 +1,14 @@
 <div class="col-md-4 mx-auto">
     <div class="card card-text">
         <div class="card-header">
-            <h3>new note</h3>
+            <h3>Nueva nota</h3>
         </div>
         <div class="card-body">
             <form action="/notes/new-note" method="POST">
-                <div class="form-group">
+                <div class="form-group m-1">
                     <input type="text" name="title" class="form-control" placeholder="Title" autofocus>
                 </div>
-                <div class="form-group">
+                <div class="form-group m-1">
                     <textarea name="description" placeholder="description" class="form-control"></textarea>
                 </div>
                 <div class="form-group">
