Se terminan de cargar paginas

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -73,7 +73,33 @@ Esto como tal no nos toca pero es importante conocerlo. </p>
             </div>
           </div>
         </div>
+
+        <div class="col">
+          <div class="card border-0">
+            <img src="img/Noticias/aviso.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"> Correspondencia escolar.</h5>
+              <p class="card-text">
+                Es muy importante que no descuidamos esta parte y sigamos el proceso de forma adecuada para solicitar el préstamos o devolución. Si alguien tiene dudas sobre este proceso o no lo tiene claro, mándenme hang para que lo podamos revisar y resolver dudas. 
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card border-0">
+            <img src="img/Noticias/demora.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"> Correspondencia escolar.</h5>
+              <p class="card-text">
+                Indican que están realizando varios procesos y la carga de trabajo se les ha incrementado. 
+              </p>
+            </div>
+          </div>
       </div>
+      </div>
+
+
 
       <div class="row row-cols-1 row-cols-md-1 py-3">
         
