--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -249,6 +249,10 @@
 
               </div>
           </div>
+
+          <!--Como realizar tramite-->
+          <div class="procesoTitNacional row" id="procesotitnacional">                        
+          </div>
         </div>
         <!--Titulo intermedio-->
         <div class="bloque noactivo m-0" id="bloqueTituloInt">
