Se corrigen scripts

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -339,3 +339,10 @@ body {
     max-width: 478px;
 
   }
+
+  .tramiteactivo{
+    display: block;
+  }
+  .tramitenoactivo{
+    display: none;
+  }
