--- a/src/views/partials/loader.hbs
+++ b/src/views/partials/loader.hbs
@@ -1,4 +1,4 @@
 
 <div class="spinner-wrapper">
-    <img class="spinner-grow text-light img-loader" src="/img/logo.ico" alt="">
+    <img class="spinner-grow text-light img-loader" src="/img/logoloader.png" alt="">
 </div>
