--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -12,7 +12,6 @@
           <div class="col"><li class="li" id="menuTramitesEscolares">Tramites que realiza escolares</li></div>
           <div class="col"><li class="li" id="menuCostosSe">Costos en plataforma</li></div>
           <div class="col"><li class="li" id="menuPreguntas_fSe">Diplomados</li></div>
-          <div class="col"><li class="li" id="menuPreguntas_fSe">Preguntas frecuentes</li></div>
           </div>
       </ul>
 
@@ -315,14 +314,14 @@
             <div class="col-4">
               <div class="col">
                 <strong>Tramite</strong></br>
-                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarDocumento(1)">Constancia de término</a>
-                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarDocumento(2)">Constancia de estudios</a>
-                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarDocumento(3)">Carta pasante</a>
-                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarDocumento(4)">Historial academico</a>
-                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarDocumento(5)">Credencial</a>
-                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarDocumento(6)">Titulo intermedio</a>
-                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarDocumento(7)">Diploma Master</a>
-                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarDocumento(8)">constancia de inscripción</a>
+                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarTramite(1)">Constancia de término</a>
+                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarTramite(2)">Constancia de estudios</a>
+                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarTramite(3)">Carta pasante</a>
+                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarTramite(4)">Historial academico</a>
+                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarTramite(5)">Credencial</a>
+                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarTramite(6)">Titulo intermedio</a>
+                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarTramite(7)">Diploma Master</a>
+                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarTramite(8)">constancia de inscripción</a>
               </div>
 
             </div>
@@ -427,7 +426,7 @@
           </div>
           
         </div> 
-        <!--Preguntas frecuentes-->
+        <!--Diplomados-->
         <div class="bloque" id="bloquePreguntas_fSe"> 
           <div class="border border-0 card mt-1">
             
@@ -478,12 +477,6 @@
 
           </div>
         </div>
-
-        <!--Preguntas frecuentes-->
-        <div class="bloque" id="bloquePreguntas_fSe"> 
-
-        </div>
-                     
       </div>
     </div>
 </div>    
